[package]
name = "tuple_list"
version = "0.1.0"
authors = ["Valerii Lashmanov <vflashm@gmail.com>"]
edition = "2018"
description = "Crate for variadic tuple metaprogramming"
# documentation = 
readme = "README.md"
repository = "https://github.com/VFLashM/tuple_list/"
license = "MIT"
keywords = ["tuple", "variadic", "generic", "meta", "metaprogramming"]
categories = ["data-structures", "rust-patterns"]